apps/base/car-health-check/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: car-health-check
  namespace: car-health-check
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: car-health-check
  template:
    metadata:
      labels:
        app: car-health-check
    spec:
      containers:
        - name: app
          image: ghcr.io/shubhamwagh/car-health-check:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
