apps/base/car-health-check/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: car-health-check-app
  namespace: car-health-check
spec:
  selector:
    app: car-health-check
  ports:
    - port: 80
      targetPort: 8000
