apps/base/car-health-check/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: car-health-check
  namespace: car-health-check
spec:
  selector:
    app: car-health-check-cache
  ports:
    - port: 80
      targetPort: 8080
